# NiraOS

./: .gitignore  BUILD_VERIFICATION.md  CMakeLists.txt  Cargo.toml  README.md  build-verify-boot.sh  build-verify-cargo.sh  extract.py  mkosi.build.chroot  mkosi.conf  mkosi.postinst.chroot  package-lock.json  package.json  rename.py  run-qemu-vnc.sh  run-qemu.sh  test-niraos-headless.sh  test-niraos-interactive.sh  test-niraos-qemu.py  test-niraos-unsafe.sh
.github/workflows/: build-iso.yml  ci.yml
apps/files/: CMakeLists.txt  files-assets.qrc
apps/files/qml/: BreadcrumbBar.qml  FileView.qml  Main.qml  PropertiesDialog.qml  PropertyRow.qml  Sidebar.qml  SidebarItem.qml  StatusBar.qml
apps/files/src/: FileModel.cpp  FileModel.h  FileOperations.cpp  FileOperations.h  FileSystemWatcher.cpp  FileSystemWatcher.h  SearchIndexer.cpp  SearchIndexer.h  StorageManager.cpp  StorageManager.h  ThumbnailProvider.cpp  ThumbnailProvider.h  io.niraos.Files.desktop  main.cpp
apps/notepad/: CMakeLists.txt  notepad-assets.qrc
apps/notepad/qml/: Main.qml
apps/notepad/src/: io.niraos.Notepad.desktop  main.cpp
core/action-manager/: Cargo.toml  build.rs
core/action-manager/src/: main.rs
core/action-manager/src/actions/: apps.rs  desktop.rs  filesystem.rs  mod.rs
core/ai-daemon/: Cargo.toml  build.rs
core/ai-daemon/config/: ai.toml
core/ai-daemon/src/: main.rs  memory.rs
core/ai-daemon/src/agent/: context.rs  tools.rs
core/ai-daemon/src/config/: mod.rs  prompts.rs
core/ai-daemon/src/grpc/: mod.rs
core/ai-daemon/src/inference/: llama_cpp.rs  mod.rs
core/ai-daemon/src/models/: downloader.rs  metadata.rs  mod.rs  registry.rs  validator.rs
core/ai-daemon/src/security/: mod.rs
core/ai-manager/: Cargo.toml  build.rs
core/ai-manager/src/: main.rs
core/app-manager/: Cargo.toml
core/app-manager/src/: main.rs
core/config/: Cargo.toml
core/config/src/: lib.rs
core/context-broker/: Cargo.toml  build.rs
core/context-broker/src/: main.rs
core/context-broker/src/cache/: memory.rs
core/context-broker/src/collectors/: filesystem.rs  hardware.rs  mod.rs  process.rs  project.rs  window.rs
core/hardware-service/: Cargo.toml  build.rs
core/hardware-service/src/: main.rs
core/model-manager/: Cargo.toml
core/nira-debug/: Cargo.toml
core/nira-gpu-test/: Cargo.toml
core/notification-service/: Cargo.toml
core/permission-manager/: Cargo.toml  build.rs
core/permission-manager/src/: main.rs  storage.rs
core/permission-manager/src/policy/: capability.rs  mod.rs
core/settings-service/: Cargo.toml  build.rs
core/settings-service/src/: main.rs
core/sys-utils/: Cargo.toml
core/sys-utils/src/: lib.rs  uds.rs
core/sys-utils/src/logger/: mod.rs
desktop/common/: DesktopMetrics.cpp  DesktopMetrics.h
desktop/compositor/: CMakeLists.txt
desktop/compositor/qml/: Main.qml
desktop/compositor/src/: ContextExporter.cpp  ContextExporter.h  WallpaperWatcher.cpp  WallpaperWatcher.h  WindowManagerDBus.cpp  WindowManagerDBus.h  main.cpp
desktop/greeter/: CMakeLists.txt
desktop/greeter/qml/: Main.qml
desktop/greeter/src/: GreeterIPC.cpp  GreeterIPC.h  UserModel.cpp  UserModel.h  main.cpp
desktop/installer/: CMakeLists.txt
desktop/settings/: CMakeLists.txt  settings-assets.qrc
desktop/settings/qml/: Main.qml
desktop/settings/src/: SettingsClient.cpp  SettingsClient.h  main.cpp
desktop/setup-wizard/: CMakeLists.txt
desktop/shell/: CMakeLists.txt  shell-assets.qrc
desktop/shell/qml/: ActionPreviewCard.qml  AiAssistant.qml  AppLauncher.qml  DesktopContextMenu.qml  DesktopView.qml  Main.qml  NiraTheme.qml  NotificationsPopup.qml  PermissionDialog.qml  TopPanel.qml  WallpaperPicker.qml
desktop/shell/src/: AiClient.cpp  AiClient.h  AppModel.cpp  AppModel.h  DesktopIconModel.cpp  DesktopIconModel.h  FilteredAppModel.cpp  FilteredAppModel.h  NotificationClient.cpp  NotificationClient.h  PowerStatus.cpp  PowerStatus.h  ProcessLauncher.cpp  ProcessLauncher.h  TaskbarModel.cpp  TaskbarModel.h  TrashIconState.cpp  TrashIconState.h  VolumeControl.cpp  VolumeControl.h  WallpaperModel.cpp  WallpaperModel.h  WorkspaceController.cpp  WorkspaceController.h  io.niraos.Shell.desktop  main.cpp
docs/: ALPHA_RELEASE_CHECKLIST.md  BETA_AUDIT.md  CYCLE10_RELEASE_EVIDENCE.md  RECOVERY_AUDIT.md  RELEASE_NOTES.md  architecture.md  getting-started.md  privacy-policy.md  security-audit.md
docs/architecture/: arch-v1.md  immutable-system.md  security.md  template.md  wayland.md
docs/benchmarks/: ai-performance.md
docs/testing/: ai-reliability.md  ai-safety-validation.md  alpha-hardware.md  alpha-tester-guide.md  boot-validation.md  demo-scenario.md  drivers.md  first-boot.md  hardware-compatibility.md  hardware-failures.md  hardware-matrix.md  installer-validation.md  performance-benchmarks.md  scenarios.md
scripts/: boot-nira-capture.sh  boot-nira-serial.sh  boot-nira.sh  build-container.ps1  build.ps1  check_compositor_qml.sh  check_cursor_assets.sh  check_cursors.sh  check_drm.sh  check_greetd.sh  check_image.sh  check_initrd.sh  check_input.sh  check_kmod.sh  check_pam.sh  check_pam2.sh  check_pam3.sh  check_qml_modules.sh  download-model.sh  dump_screen.py  export_pngs.js  export_wallpapers.js  generate_animations.py  generate_illustrations.py  generate_nira_asset_suites.py  generate_nira_icons.py  generate_phase2_svgs.py  generate_wallpapers.py  nira-dev.sh  nira-recovery.sh  package-lock.json  package.json  qmp_check.py  qmp_input.py  qmp_login.py  qmp_serial.py  qmp_shell.py  quick_verify.sh  rasterize_nira_icons.py  run-qemu.ps1  (+19 more)
scripts/systemd/: nira-action.service  nira-ai.service  nira-ai.socket  nira-compositor.service  nira-context.service  nira-hardware.service  nira-model.service  nira-permission.service  nira-shell.service
systemd/: nira-ai.service  nira-context.service  nira-permission.service
systemd/user/: nira-action.service  nira-ai-manager.service  nira-compositor.service  nira-notification.service  nira-settings.service  nira-shell.service
tests/integration/: test_dump_screen.py  test_image_contract.py
tests/qa/: test_guest_runtime.py
(+23 files in other folders)
