cmake_minimum_required(VERSION 3.16)
project(NiraNotepad VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(Qt6 REQUIRED COMPONENTS Core Gui Qml Quick QuickControls2)
qt_standard_project_setup(REQUIRES 6.5)
qt_add_executable(nira-notepad src/main.cpp)
qt_add_qml_module(nira-notepad URI NiraNotepad VERSION 1.0 QML_FILES qml/Main.qml)
qt_add_resources(nira-notepad "notepad-assets" PREFIX "/" FILES notepad-assets.qrc)
target_link_libraries(nira-notepad PRIVATE Qt6::Core Qt6::Gui Qt6::Qml Qt6::Quick Qt6::QuickControls2)
install(TARGETS nira-notepad DESTINATION bin)
install(FILES src/io.niraos.Notepad.desktop DESTINATION share/applications)
