[package]
name = "ai-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]

sys-utils = { path = "../sys-utils", features = ["uds"] }
anyhow.workspace = true
async-trait = "0.1"
prost.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
shellexpand = "3.1"
encoding_rs = "0.8"
sysinfo = "0.30"
reqwest.workspace = true
libc.workspace = true
sha2 = "0.10"
futures-util = "0.3"


llama-cpp-2 = "0.1"

[features]
default = []
# vulkan = ["llama-cpp-2/vulkan"]
# cuda = ["llama-cpp-2/cuda"]

[build-dependencies]
tonic-build.workspace = true


