[package]
name = "settings-service"
version = "0.1.0"
edition = "2021"

[dependencies]

sys-utils = { path = "../sys-utils", features = ["uds"] }
tokio.workspace = true
anyhow.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
toml = "0.8"

[build-dependencies]
tonic-build.workspace = true


