[package]
name = "sys-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tokio-stream = { version = "0.1", optional = true, features = ["net"] }
tower = { version = "0.5.3", features = ["util"] }

[features]
default = []
uds = ["tokio", "tonic", "tokio-stream"]
