cmake_minimum_required(VERSION 3.16)
project(NiraGreeter VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Core Gui Qml Quick QuickControls2)

qt_standard_project_setup(REQUIRES 6.5)

qt_add_executable(nira-greeter
    src/main.cpp
    src/GreeterIPC.cpp
    src/GreeterIPC.h
    src/UserModel.cpp
    src/UserModel.h
)

qt_add_qml_module(nira-greeter
    URI NiraGreeter
    VERSION 1.0
    QML_FILES
        qml/Main.qml
)

target_link_libraries(nira-greeter PRIVATE
    Qt6::Core
    Qt6::Gui
    Qt6::Qml
    Qt6::Quick
    Qt6::QuickControls2
)

install(TARGETS nira-greeter DESTINATION bin)
